--- a/fonts/flaticon_notion.css
+++ b/fonts/flaticon_notion.css
@@ -11,11 +11,11 @@
 
 @font-face {
     font-family: "flaticon_notion";
-    src: url("./flaticon_notion.woff2") format("woff2"),
-url("./flaticon_notion.woff") format("woff"),
-url("./flaticon_notion.eot#iefix") format("embedded-opentype"),
-url("./flaticon_notion.ttf") format("truetype"),
-url("./flaticon_notion.svg#flaticon_notion") format("svg")
+    src: url("./flaticon_notion.woff2?6f21448976373217a620011366259cec") format("woff2"),
+url("./flaticon_notion.woff?6f21448976373217a620011366259cec") format("woff"),
+url("./flaticon_notion.eot?6f21448976373217a620011366259cec#iefix") format("embedded-opentype"),
+url("./flaticon_notion.ttf?6f21448976373217a620011366259cec") format("truetype"),
+url("./flaticon_notion.svg?6f21448976373217a620011366259cec#flaticon_notion") format("svg")
 }
 
 i[class^="flaticon-"]:before, i[class*=" flaticon-"]:before {
@@ -32,355 +32,396 @@ i[class^="flaticon-"]:before, i[class*=" flaticon-"]:before {
 .flaticon-sewing-machine:before {
     content: "\f101";
 }
-.flaticon-fabric-pattern:before {
+.flaticon-sewing-machine-1:before {
     content: "\f102";
 }
-.flaticon-sewing-machine-1:before {
+.flaticon-mannequin:before {
     content: "\f103";
 }
-.flaticon-mannequin:before {
+.flaticon-ball-of-wool:before {
     content: "\f104";
 }
-.flaticon-measuring-tape:before {
+.flaticon-embroidery:before {
     content: "\f105";
 }
-.flaticon-zipper:before {
+.flaticon-needle-thread:before {
     content: "\f106";
 }
-.flaticon-ball-of-wool:before {
+.flaticon-crochet:before {
     content: "\f107";
 }
-.flaticon-embroidery:before {
+.flaticon-knitting-needles:before {
     content: "\f108";
 }
-.flaticon-embroidery-1:before {
+.flaticon-hood:before {
     content: "\f109";
 }
-.flaticon-needle-thread:before {
+.flaticon-male-clothes:before {
     content: "\f10a";
 }
-.flaticon-crochet:before {
+.flaticon-button:before {
     content: "\f10b";
 }
-.flaticon-knitting-needles:before {
+.flaticon-shoe:before {
     content: "\f10c";
 }
-.flaticon-hood:before {
+.flaticon-sport-shoe:before {
     content: "\f10d";
 }
-.flaticon-male-clothes:before {
+.flaticon-swimsuit:before {
     content: "\f10e";
 }
-.flaticon-button:before {
+.flaticon-skirt:before {
     content: "\f10f";
 }
-.flaticon-shoe:before {
+.flaticon-tshirt:before {
     content: "\f110";
 }
-.flaticon-sport-shoe:before {
+.flaticon-jeans:before {
     content: "\f111";
 }
-.flaticon-swimsuit:before {
+.flaticon-denim-jacket:before {
     content: "\f112";
 }
-.flaticon-skirt:before {
+.flaticon-loose-pants:before {
     content: "\f113";
 }
-.flaticon-tshirt:before {
+.flaticon-trousers:before {
     content: "\f114";
 }
-.flaticon-jeans:before {
+.flaticon-skirt-1:before {
     content: "\f115";
 }
-.flaticon-denim-jacket:before {
+.flaticon-sweater:before {
     content: "\f116";
 }
-.flaticon-loose-pants:before {
+.flaticon-overcoat:before {
     content: "\f117";
 }
-.flaticon-trousers:before {
+.flaticon-singlet:before {
     content: "\f118";
 }
-.flaticon-skirt-1:before {
+.flaticon-leggings:before {
     content: "\f119";
 }
-.flaticon-sweater:before {
+.flaticon-long-sleeve:before {
     content: "\f11a";
 }
-.flaticon-overcoat:before {
+.flaticon-dress:before {
     content: "\f11b";
 }
-.flaticon-singlet:before {
+.flaticon-overall:before {
     content: "\f11c";
 }
-.flaticon-leggings:before {
+.flaticon-textile:before {
     content: "\f11d";
 }
-.flaticon-long-sleeve:before {
+.flaticon-baby-clothes:before {
     content: "\f11e";
 }
-.flaticon-dress:before {
+.flaticon-baby-onesie:before {
     content: "\f11f";
 }
-.flaticon-overall:before {
+.flaticon-iron:before {
     content: "\f120";
 }
-.flaticon-textile:before {
+.flaticon-dress-1:before {
     content: "\f121";
 }
-.flaticon-baby-clothes:before {
+.flaticon-high-heels:before {
     content: "\f122";
 }
-.flaticon-baby-onesie:before {
+.flaticon-smart-shoe:before {
     content: "\f123";
 }
-.flaticon-iron:before {
+.flaticon-boot:before {
     content: "\f124";
 }
-.flaticon-dress-1:before {
+.flaticon-sneakers:before {
     content: "\f125";
 }
-.flaticon-high-heels:before {
+.flaticon-boots:before {
     content: "\f126";
 }
-.flaticon-smart-shoe:before {
+.flaticon-handbag:before {
     content: "\f127";
 }
-.flaticon-boot:before {
+.flaticon-pamela-hat:before {
     content: "\f128";
 }
-.flaticon-sneakers:before {
+.flaticon-jewelry:before {
     content: "\f129";
 }
-.flaticon-boots:before {
+.flaticon-diamond-ring:before {
     content: "\f12a";
 }
-.flaticon-handbag:before {
+.flaticon-wristwatch:before {
     content: "\f12b";
 }
-.flaticon-pamela-hat:before {
+.flaticon-bracelet:before {
     content: "\f12c";
 }
-.flaticon-jewelry:before {
+.flaticon-piercing:before {
     content: "\f12d";
 }
-.flaticon-diamond-ring:before {
+.flaticon-necklace:before {
     content: "\f12e";
 }
-.flaticon-wristwatch:before {
+.flaticon-school-bag:before {
     content: "\f12f";
 }
-.flaticon-bracelet:before {
+.flaticon-suitcase:before {
     content: "\f130";
 }
-.flaticon-piercing:before {
+.flaticon-goodie-bag:before {
     content: "\f131";
 }
-.flaticon-necklace:before {
+.flaticon-table-saw:before {
     content: "\f132";
 }
-.flaticon-school-bag:before {
+.flaticon-circular-saw:before {
     content: "\f133";
 }
-.flaticon-suitcase:before {
+.flaticon-hand-saw:before {
     content: "\f134";
 }
-.flaticon-goodie-bag:before {
+.flaticon-hammer:before {
     content: "\f135";
 }
-.flaticon-table-saw:before {
+.flaticon-glue:before {
     content: "\f136";
 }
-.flaticon-circular-saw:before {
+.flaticon-tools:before {
     content: "\f137";
 }
-.flaticon-hand-saw:before {
+.flaticon-tool:before {
     content: "\f138";
 }
-.flaticon-hammer:before {
+.flaticon-circular-saw-1:before {
     content: "\f139";
 }
-.flaticon-glue:before {
+.flaticon-toolbox:before {
     content: "\f13a";
 }
-.flaticon-tools:before {
+.flaticon-scissor:before {
     content: "\f13b";
 }
-.flaticon-tool:before {
+.flaticon-wrench:before {
     content: "\f13c";
 }
-.flaticon-circular-saw-1:before {
+.flaticon-bolt:before {
     content: "\f13d";
 }
-.flaticon-toolbox:before {
+.flaticon-drill:before {
     content: "\f13e";
 }
-.flaticon-scissor:before {
+.flaticon-drill-1:before {
     content: "\f13f";
 }
-.flaticon-wrench:before {
+.flaticon-measuring-tape:before {
     content: "\f140";
 }
-.flaticon-bolt:before {
+.flaticon-cutter:before {
     content: "\f141";
 }
-.flaticon-drill:before {
+.flaticon-scissors:before {
     content: "\f142";
 }
-.flaticon-drill-1:before {
+.flaticon-paint-brush:before {
     content: "\f143";
 }
-.flaticon-measuring-tape-1:before {
+.flaticon-paint-bucket:before {
     content: "\f144";
 }
-.flaticon-cutter:before {
+.flaticon-paint-roller:before {
     content: "\f145";
 }
-.flaticon-scissors:before {
+.flaticon-saw:before {
     content: "\f146";
 }
-.flaticon-paint-brush:before {
+.flaticon-ruler:before {
     content: "\f147";
 }
-.flaticon-paint-bucket:before {
+.flaticon-books:before {
     content: "\f148";
 }
-.flaticon-paint-roller:before {
+.flaticon-books-1:before {
     content: "\f149";
 }
-.flaticon-saw:before {
+.flaticon-books-2:before {
     content: "\f14a";
 }
-.flaticon-ruler:before {
+.flaticon-open-book:before {
     content: "\f14b";
 }
-.flaticon-books:before {
+.flaticon-library:before {
     content: "\f14c";
 }
-.flaticon-books-1:before {
+.flaticon-bookmark:before {
     content: "\f14d";
 }
-.flaticon-books-2:before {
+.flaticon-books-3:before {
     content: "\f14e";
 }
-.flaticon-open-book:before {
+.flaticon-documentary:before {
     content: "\f14f";
 }
-.flaticon-library:before {
+.flaticon-romance:before {
     content: "\f150";
 }
-.flaticon-bookmark:before {
+.flaticon-comedy:before {
     content: "\f151";
 }
-.flaticon-books-3:before {
+.flaticon-mystery:before {
     content: "\f152";
 }
-.flaticon-documentary:before {
+.flaticon-action:before {
     content: "\f153";
 }
-.flaticon-romance:before {
+.flaticon-psychology:before {
     content: "\f154";
 }
-.flaticon-comedy:before {
+.flaticon-horror:before {
     content: "\f155";
 }
-.flaticon-mystery:before {
+.flaticon-drama:before {
     content: "\f156";
 }
-.flaticon-action:before {
+.flaticon-party:before {
     content: "\f157";
 }
-.flaticon-psychology:before {
+.flaticon-cartoon:before {
     content: "\f158";
 }
-.flaticon-horror:before {
+.flaticon-fantasy:before {
     content: "\f159";
 }
-.flaticon-drama:before {
+.flaticon-sci-fi:before {
     content: "\f15a";
 }
-.flaticon-party:before {
+.flaticon-audio-book:before {
     content: "\f15b";
 }
-.flaticon-cartoon:before {
+.flaticon-shakespeare:before {
     content: "\f15c";
 }
-.flaticon-fantasy:before {
+.flaticon-all-star:before {
     content: "\f15d";
 }
-.flaticon-sci-fi:before {
+.flaticon-shakespeare-1:before {
     content: "\f15e";
 }
-.flaticon-audio-book:before {
+.flaticon-romantic-novel:before {
     content: "\f15f";
 }
-.flaticon-shakespeare:before {
+.flaticon-biological:before {
     content: "\f160";
 }
-.flaticon-all-star:before {
+.flaticon-fantasy-1:before {
     content: "\f161";
 }
-.flaticon-shakespeare-1:before {
+.flaticon-crime:before {
     content: "\f162";
 }
-.flaticon-romantic-novel:before {
+.flaticon-science-fiction:before {
     content: "\f163";
 }
-.flaticon-biological:before {
+.flaticon-horror-1:before {
     content: "\f164";
 }
-.flaticon-fantasy-1:before {
+.flaticon-history:before {
     content: "\f165";
 }
-.flaticon-crime:before {
+.flaticon-comic:before {
     content: "\f166";
 }
-.flaticon-science-fiction:before {
+.flaticon-joke:before {
     content: "\f167";
 }
-.flaticon-horror-1:before {
+.flaticon-fantasy-2:before {
     content: "\f168";
 }
-.flaticon-history:before {
+.flaticon-mystery-1:before {
     content: "\f169";
 }
-.flaticon-comic:before {
+.flaticon-science:before {
     content: "\f16a";
 }
-.flaticon-joke:before {
+.flaticon-biography:before {
     content: "\f16b";
 }
-.flaticon-fantasy-2:before {
+.flaticon-television:before {
     content: "\f16c";
 }
-.flaticon-mystery-1:before {
+.flaticon-film-reel:before {
     content: "\f16d";
 }
-.flaticon-science:before {
+.flaticon-movie:before {
     content: "\f16e";
 }
-.flaticon-biography:before {
+.flaticon-ticket:before {
     content: "\f16f";
 }
-.flaticon-television:before {
+.flaticon-concert:before {
     content: "\f170";
 }
-.flaticon-film-reel:before {
+.flaticon-theater:before {
     content: "\f171";
 }
-.flaticon-movie:before {
+.flaticon-home:before {
     content: "\f172";
 }
-.flaticon-ticket:before {
+.flaticon-embroidery-1:before {
     content: "\f173";
 }
-.flaticon-concert:before {
+.flaticon-embroidery-2:before {
     content: "\f174";
 }
-.flaticon-theater:before {
+.flaticon-embroidery-3:before {
     content: "\f175";
 }
-.flaticon-home:before {
+.flaticon-embroidery-4:before {
     content: "\f176";
 }
-
+.flaticon-thread:before {
+    content: "\f177";
+}
+.flaticon-wool:before {
+    content: "\f178";
+}
+.flaticon-wool-fabric:before {
+    content: "\f179";
+}
+.flaticon-art-and-design:before {
+    content: "\f17a";
+}
+.flaticon-sheep:before {
+    content: "\f17b";
+}
+.flaticon-needle:before {
+    content: "\f17c";
+}
+.flaticon-circular:before {
+    content: "\f17d";
+}
+.flaticon-pattern:before {
+    content: "\f17e";
+}
+.flaticon-fabric-pattern:before {
+    content: "\f17f";
+}
+.flaticon-dummy:before {
+    content: "\f180";
+}
+.flaticon-fabric:before {
+    content: "\f181";
+}
+.flaticon-sample:before {
+    content: "\f182";
+}
+.flaticon-wishlist:before {
+    content: "\f183";
+}
+.flaticon-inspiration:before {
+    content: "\f184";
+}
